--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Weather</string>
+    <string name="textfield_search">Search…</string>
+    <string name="label_favorite_city">Favorite Cities</string>
+    <string name="label_search_result">Search Result</string>
 </resources>
