--- a/shared/uikit/src/androidMain/res/values/strings.xml
+++ b/shared/uikit/src/androidMain/res/values/strings.xml
@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="error_need_retry">Oops, something wrong\n please try again</string>
+    <string name="button_retry">Retry</string>
 </resources>
